src/objects/Campus__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>Universities</label>
        <referenceTo>Universities__c</referenceTo>
        <relationshipLabel>Campus</relationshipLabel>
        <relationshipName>Campus</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Campus</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Campus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campus</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>